enables checkstyle at root project.