@@ -17,7 +17,6 @@
         <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
 
         <project.testresult.directory>${project.build.directory}/test-results</project.testresult.directory>
-        <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
         <maven-pmd-plugin.version>3.13.0</maven-pmd-plugin.version>
         <dependency-check-maven.version>6.2.1</dependency-check-maven.version>
 
@@ -177,49 +176,6 @@
                         <includeOnlyProperty>^git.branch$</includeOnlyProperty>
                     </includeOnlyProperties>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <runOrder>alphabetical</runOrder>
-                    <argLine>--enable-preview</argLine>
-                    <reportsDirectory>${junit.utReportFolder}</reportsDirectory>
-                    <excludes>
-                        <exclude>**/*IT*</exclude>
-                        <exclude>**/*IntTest*</exclude>
-                        <exclude>**/*IntegrationTest*</exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <configuration>
-                    <classesDirectory>${project.build.outputDirectory}</classesDirectory>
-                    <runOrder>alphabetical</runOrder>
-                    <argLine>--enable-preview</argLine>
-                    <reportsDirectory>${junit.itReportFolder}</reportsDirectory>
-                    <includes>
-                        <include>**/*IT*</include>
-                        <include>**/*IntTest*</include>
-                        <include>**/*IntegrationTest*</include>
-                    </includes>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>integration-test</id>
-                        <goals>
-                            <goal>integration-test</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>verify</id>
-                        <goals>
-                            <goal>verify</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
