@@ -140,49 +140,6 @@
 					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<runOrder>alphabetical</runOrder>
-					<argLine>--enable-preview</argLine>
-					<reportsDirectory>${junit.utReportFolder}</reportsDirectory>
-					<excludes>
-						<exclude>**/*IT*</exclude>
-						<exclude>**/*IntTest*</exclude>
-						<exclude>**/*IntegrationTest*</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<configuration>
-					<classesDirectory>${project.build.outputDirectory}</classesDirectory>
-					<runOrder>alphabetical</runOrder>
-					<argLine>--enable-preview</argLine>
-					<reportsDirectory>${junit.itReportFolder}</reportsDirectory>
-					<includes>
-						<include>**/*IT*</include>
-						<include>**/*IntTest*</include>
-						<include>**/*IntegrationTest*</include>
-					</includes>
-				</configuration>
-				<executions>
-					<execution>
-						<id>integration-test</id>
-						<goals>
-							<goal>integration-test</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>verify</id>
-						<goals>
-							<goal>verify</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
 		</plugins>
 	</build>
 
